<resources>
    <string name="app_name">Fix</string>
    <string name="hello_android">Hello Android</string>
    <string name="e_mail">E-mail</string>
    <string name="todo">TODOuno</string>
    <string name="register">register</string>
    <string name="login">logIn</string>
    <string name="password">Password</string>
    <string name="registre_b">registre</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="todo_uno">TODOdos</string>
    <string name="todo_dos">otres</string>
    <string name="todo_google">ocuatro</string>
    <string name="emailtextview">EmailTextView</string>
    <string name="provider">provider</string>
    <string name="logout_butt">logout_butt</string>
    <string name="email">Email</string>
    <string name="plumbingText">Plumbing</string>
    <string name="mechanicText">Mechanic</string>
    <string name="careText">Care</string>
    <string name="cleaningText">Cleaning</string>
    <string name="locksmithText">Locksmith</string>
    <string name="paintingText">Painting</string>
    <string name="servicesText">Services</string>
    <string name="buildingText">Building</string>
    <string name="contract_serviceText">Contract Service</string>
    <string name="publish_serviceText">Publish Service</string>
    <string name="carpentryText">Carpentry</string>
    <string name="prefs_file">com.christianfajardo.fix.PREFERENCE_FILE_KEY</string>


    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="title_activity_paintscreem">activityPaintscreem</string>
    <string name="especialista">Specialist</string>
    <string name="descripci_n">description</string>
    <string name="llamar">CALL</string>
    <string name="profilepic">profilePic</string>
    <string name="nameRegistre">Name</string>
    <string name="phoneRegistre">Phone</string>
    <string name="descriptionRegistre">Description</string>
    <string name="publishRegistre">PUBLISH</string>
    <string name="result">Result</string>
    <string name="painting">Painting</string>
    <string name="open_camera">open camera</string>
    <string name="v_1_2_1">V.1.2.1</string>
    <string name="image1">image1</string>
    <string name="message">message</string>
    <string name="call">llamar</string>

</resources>
