<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".ui.PaintScreenActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="150dp"
        android:layout_height="165dp"
        app:civ_border_width="2dp"
        tools:background="@color/colorPrimary" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Name"
            />

        <TextView
            android:id="@+id/txt_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="Phone"
            />


        <TextView
            android:id="@+id/especialista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/especialista" />

        <TextView
            android:id="@+id/descripccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n" />

        <Button
            android:id="@+id/llamaruno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#609A1D"
            android:text="@string/llamar"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</LinearLayout>
