<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:drawingCacheQuality="auto"
    tools:context=".ui.ServicesActivity">


    <TextView
        android:id="@+id/buildingText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="612dp"
        android:fontFamily="@font/zippy"
        android:text="@string/plumbingText"
        android:textColor="#26C6DA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mechanicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="612dp"
        android:fontFamily="@font/zippy"
        android:text="@string/mechanicText"
        android:textColor="#26C6DA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buildingText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="468dp"
        android:fontFamily="@font/zippy"
        android:text="@string/careText"
        android:textColor="#26C6DA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buildingText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:fontFamily="@font/zippy"
        android:text="@string/cleaningText"
        android:textColor="#26C6DA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locksmithText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:fontFamily="@font/zippy"
        android:text="@string/locksmithText"
        android:textColor="#26C6DA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/plumbingButtom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fontaneriados" />

    <ImageView
        android:id="@+id/careButtom"
        android:layout_width="120dp"
        android:layout_height="97dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locksmithButtom"
        app:srcCompat="@drawable/asistencia" />

    <ImageView
        android:id="@+id/locksmithButtom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paintingButtom"
        app:srcCompat="@drawable/cerrajeriados" />

    <ImageView
        android:id="@+id/carpentryButtom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cleaningButtom"
        app:srcCompat="@drawable/iconocarpinteria" />

    <ImageView
        android:id="@+id/cleaningButtom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/limpiezados" />

    <ImageView
        android:id="@+id/paintingButtom"
        android:layout_width="154dp"
        android:layout_height="134dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pintura1" />

    <ImageView
        android:id="@+id/mecanicButtom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/careButtom"
        app:srcCompat="@drawable/mecanica" />

    <TextView
        android:id="@+id/carpentryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        android:fontFamily="@font/zippy"
        android:text="@string/carpentryText"
        android:textColor="#26C6DA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/buildingButtom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/construcciondos" />

    <TextView
        android:id="@+id/versionuno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="V.1.2.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/paintinglet"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginTop="208dp"
        android:fontFamily="@font/zippyuno"
        android:text="@string/paintingText"
        android:textColor="#26C6DA"
        android:textColorLink="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/servicesText"
        android:layout_width="172dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zippyuno"
        android:foregroundTintMode="src_over"
        android:gravity="center"
        android:text="@string/servicesText"
        android:textColor="#26C6DA"
        android:textSize="66sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buildingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:fontFamily="@font/zippy"
        android:text="@string/buildingText"
        android:textColor="#26C6DA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>